--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>daily-persona-quiz</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>PersonaSense - Discover Your Personality Type</title>
+    <meta name="description" content="Take our interactive personality quiz to discover whether you're an introvert or extrovert. Beautiful, engaging questions about your daily habits and social preferences." />
+    <meta name="author" content="PersonaSense" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="alternate icon" href="/favicon.png" />
 
-    <meta property="og:title" content="daily-persona-quiz" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="PersonaSense - Discover Your Personality Type" />
+    <meta property="og:description" content="Take our interactive personality quiz to discover whether you're an introvert or extrovert. Beautiful, engaging questions about your daily habits and social preferences." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="PersonaSense - Discover Your Personality Type" />
+    <meta name="twitter:description" content="Take our interactive personality quiz to discover whether you're an introvert or extrovert." />
+    <meta name="twitter:image" content="/favicon.png" />
   </head>
 
   <body>
